--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                  </p>
                 </div>
                 <div class="col-sm-6">
-                 <p>Ini bukanlah wwebsite untuk bisnis .
+                 <p>Ini bukanlah website untuk bisnis .
                      <br>
                      Ini adalah website hasil belajar di cenel youtube WEB PROGRAMING UNPAS
 
@@ -259,6 +259,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
